src/objects/FieloAlpha__Banner__c.object
<CustomObject>
    <description>Image files that are shown by using a “Banner” component in the members’ portal.</description>
    <fields>
        <fullName>FieloAlpha__AttachmentId__c</fullName>
        <description>The ID of the attached image.</description>
        <label>Image Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>FieloAlpha__Category__c</referenceTo>
        <relationshipLabel>Banners</relationshipLabel>
        <relationshipName>Banners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the component that shows the banner.</description>
        <inlineHelpText>Choose a name for this component.</inlineHelpText>
        <label>Component</label>
        <referenceTo>FieloAlpha__Component__c</referenceTo>
        <relationshipLabel>Banners</relationshipLabel>
        <relationshipName>Banners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Description__c</fullName>
        <description>A description of the banner, for your use only.</description>
        <inlineHelpText>Enter a description for this banner.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>FieloAlpha__Event__c</referenceTo>
        <relationshipLabel>Banners</relationshipLabel>
        <relationshipName>Banners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__From__c</fullName>
        <description>Date from which a banner will show in the members&apos; portal.</description>
        <inlineHelpText>Set the starting date for showing this banner in the front end.</inlineHelpText>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__HasSegments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Segments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Image__c</fullName>
        <description>Content of the image correspondent to a banner</description>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+FieloAlpha__AttachmentId__c, &quot;photo&quot;,50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Link__c</fullName>
        <description>External or internal link to which the banner will redirect.</description>
        <inlineHelpText>Enter the URL you want this image to redirect to. The link must be of the form &quot;http://www.domain.com&quot;.</inlineHelpText>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Order__c</fullName>
        <description>The order of the banners in the Slider type.</description>
        <inlineHelpText>Establish the order of the images in the slider banner.</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__OverlayHtml__c</fullName>
        <description>An HTML code to be rendered over the banner.</description>
        <inlineHelpText>Enter an HTML code that will be rendered over the image.</inlineHelpText>
        <label>Overlay HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__OverlayText__c</fullName>
        <description>A text to be shown over the banner.</description>
        <inlineHelpText>Enter a text to be shown over the image.</inlineHelpText>
        <label>Overlay Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Placement__c</fullName>
        <description>Where will the banner be shown. You can select the banner to be shown among your different Fielo programs or in a mobile device.</description>
        <inlineHelpText>Use this picklist to show the banner in custom pages.</inlineHelpText>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Home Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipLabel>Banner</relationshipLabel>
        <relationshipName>Banner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used to determine if a Banner has segments. When this lookup is null, it doesn&apos;t have any Segment Domain.</description>
        <label>Segment</label>
        <referenceTo>FieloAlpha__RedemptionRule__c</referenceTo>
        <relationshipLabel>Banners</relationshipLabel>
        <relationshipName>Banners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__To__c</fullName>
        <description>Date until which the banner will show in the members&apos; portal.</description>
        <inlineHelpText>Set the last day this banner will be shown in the front end.</inlineHelpText>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only banners marked as active will show in the members&apos; portal. You can only mark a banner as active after you have uploaded an image file.</description>
        <inlineHelpText>Check the box in order to activate the banner. You can only activate a banner if it has a related image.</inlineHelpText>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Banner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__All_Banners</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Banners</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banners</pluralLabel>
    <recordTypes>
        <fullName>FieloAlpha__Component</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloAlpha__Free</fullName>
        <active>false</active>
        <label>Free</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ActiveBanner</fullName>
        <active>false</active>
        <errorConditionFormula>( ISNULL( FieloAlpha__AttachmentId__c ) || ISBLANK( FieloAlpha__AttachmentId__c ) ) &amp;&amp; (FieloAlpha__isActive__c == true)</errorConditionFormula>
        <errorMessage>You must load an image to active a banner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__EndDategreaterthanStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__From__c &gt; FieloAlpha__To__c</errorConditionFormula>
        <errorDisplayField>FieloAlpha__From__c</errorDisplayField>
        <errorMessage>To Date must be greater than From Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloAlpha__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloAlpha__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(Name) ,  ISBLANK(Name) )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Order_can_not_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__Order__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Order__c</errorDisplayField>
        <errorMessage>The order can not be negative</errorMessage>
    </validationRules>
</CustomObject>